# PDFMathTranslate-next

./: .gitignore  404.html  CODE_OF_CONDUCT.html  CUSTOM_TRANSLATOR_GUIDE.md  FAQ.html  PLUGIN_DEPLOYMENT_GUIDE.md  README.md  index.html  pyproject.toml  sitemap.xml  supported_languages.html
advanced/: Documentation-of-Translation-Services.html  Language-Codes.html  advanced.html  introduction.html
community/: Contribution-Guide.html  Translate-Contribution-Guide.html
de/: APIS.html  CODE_OF_CONDUCT.html  FAQ.html  index.html  supported_languages.html
docs/: session-2025-08-29.md
es/: APIS.html  CODE_OF_CONDUCT.html  FAQ.html  index.html  supported_languages.html
examples/pdf2zh-plugin-sungrow/: README.md  pyproject.toml
examples/pdf2zh-plugin-sungrow/src/pdf2zh_plugin_sungrow/: sungrow.py
fr/: APIS.html  CODE_OF_CONDUCT.html  FAQ.html  index.html  supported_languages.html
getting-started/: INSTALLATION_docker.html  INSTALLATION_uv.html  INSTALLATION_winexe.html  USAGE_commandline.html  USAGE_webui.html  getting-started.html
it/: APIS.html  CODE_OF_CONDUCT.html  FAQ.html  index.html  supported_languages.html
ja/: APIS.html  CODE_OF_CONDUCT.html  FAQ.html  index.html  supported_languages.html
ko/: APIS.html  CODE_OF_CONDUCT.html  FAQ.html  index.html  supported_languages.html
pdf2zh_next/: __init__.py  gui.py  high_level.py  main.py  plugin_doctor.py
pt/: APIS.html  CODE_OF_CONDUCT.html  FAQ.html  index.html  supported_languages.html
ru/: APIS.html  CODE_OF_CONDUCT.html  FAQ.html  index.html  supported_languages.html
search/: search_index.json
(+175 files in other folders)
